Add end to end - form -> table-> map save the location on map add validators to the form.

--- a/src/app/Component/main/main.component.html
+++ b/src/app/Component/main/main.component.html
@@ -14,8 +14,8 @@
 
       <div class="card-container map component-size top-space" >
         <div class="card" >
-          <span>Map</span>
-         <!-- <app-map class="fill-all"></app-map>-->
+        <!--  <span>Map</span>-->
+          <app-map class="fill-all"></app-map>
         </div>
       </div>
     </div>
