--- a/src/app/Component/search-states/search-states.component.html
+++ b/src/app/Component/search-states/search-states.component.html
@@ -5,8 +5,8 @@
            aria-label="State"
            [matAutocomplete]="auto"
            [formControl]="stateCtrl">
-    <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let state of filteredStates | async" [value]="state.name">
+    <mat-autocomplete  #auto="matAutocomplete"  (optionSelected)="stateOptionSelected($event)">
+      <mat-option *ngFor="let state of filteredStates | async" [value]="state.name"   >
         <img class="example-option-img" aria-hidden [src]="state.flag" height="25">
         <span>{{state.name}}</span>
 <!--        <small>Population: {{state.population}}</small>-->
@@ -14,5 +14,4 @@
     </mat-autocomplete>
   </mat-form-field>
 
-  <br>
 
