--- a/src/app/Component/form/form.component.html
+++ b/src/app/Component/form/form.component.html
@@ -4,27 +4,28 @@
       <mat-card-title >Traveling to...</mat-card-title>
     </mat-card-header>
 
-    <form class="example-form">
+    <form [formGroup]="tripForm" class="example-form" (ngSubmit)="onSubmit()">
 
       <mat-card-content>
 
-        <app-search-states></app-search-states>
+
+        <app-search-states  (selectedState)="stateOptionSelected($event)" ></app-search-states>
 
         <mat-form-field  class="example-full-width">
           <mat-label>Enter a date range</mat-label>
-          <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-            <input matStartDate formControlName="start" placeholder="Start date">
-            <input matEndDate formControlName="end" placeholder="End date">
+          <mat-date-range-input  [rangePicker]="picker">
+            <input matStartDate formControlName="fromDate" placeholder="Start date">
+            <input matEndDate formControlName="toDate" placeholder="End date">
           </mat-date-range-input>
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-date-range-picker #picker></mat-date-range-picker>
 
-          <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-          <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+          <mat-error *ngIf="tripForm.controls.fromDate.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+          <mat-error *ngIf="tripForm.controls.toDate.hasError('matEndDateInvalid')">Invalid end date</mat-error>
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Notes">
+          <input matInput  formControlName="note" placeholder="Notes">
         </mat-form-field>
 
        <!-- <mat-form-field class="example-full-width">
@@ -37,7 +38,7 @@
 
       </mat-card-content>
 
-      <button mat-stroked-button color="accent" class="btn-block">Save</button>
+      <button mat-stroked-button color="accent" class="btn-block" [disabled]="!tripForm.valid" type="submit">Save</button>
 
     </form>
   </mat-card>
