--- a/src/app/Component/main/main.component.scss
+++ b/src/app/Component/main/main.component.scss
@@ -112,7 +112,8 @@ a:hover {
   height: 100%;
   width: 100%;
   align-items: center;
-
+  background-size: cover ;
+  background-image: url(/assets/sky.jpg);
 }
 
 .table {
