--- a/src/app/Component/trips-table/trips-table.component.html
+++ b/src/app/Component/trips-table/trips-table.component.html
@@ -39,7 +39,7 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
   <tr
     mat-row
-    (click)="clickedRows.add(row)"
+    (click)="pickARow(row)"
     *matRowDef="let row; columns: displayedColumns;"
   ></tr>
 </table>
