--- a/src/app/Component/trips-table/trips-table.component.scss
+++ b/src/app/Component/trips-table/trips-table.component.scss
@@ -27,7 +27,7 @@
 }
 
 .mat-row:hover .mat-cell {
-  border-color: currentColor;
+  background-color: #bbdbea;
 }
 
 .demo-row-is-clicked {
@@ -43,8 +43,8 @@ table{
 .mat-column-stateName {
   word-wrap: break-word !important;
   white-space: unset !important;
-  flex: 0 0 15% !important;
-  width: 15% !important;
+  flex: 0 0 25% !important;
+  width: 25% !important;
   overflow-wrap: break-word;
   word-wrap: break-word;
 
@@ -91,8 +91,8 @@ table{
 .mat-column-note {
   word-wrap: break-word !important;
   white-space: unset !important;
-  flex: 0 0 50% !important;
-  width: 40% !important;
+  flex: 0 0 35% !important;
+  width: 35% !important;
   overflow-wrap: break-word;
   word-wrap: break-word;
 
@@ -107,7 +107,7 @@ table{
 .mat-column-flag {
   word-wrap: break-word !important;
   white-space: unset !important;
-  flex: 0 0 5% !important;
+  flex: 0 0 10% !important;
   width: 10% !important;
   overflow-wrap: break-word;
   word-wrap: break-word;
